--- a/.github/workflows/exercise_workflow.yml
+++ b/.github/workflows/exercise_workflow.yml
@@ -25,10 +25,31 @@ jobs:
       - name: "Upload artifact"
         uses: actions/upload-artifact@v4
         with:
-          name: coverage
+          name: coverage-file
           path: .coverage
           retention-days: 1
 
-
-
-  
+  coverage_report:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.10'
+      - name: "Install packages"
+        run: pip install coverage
+      - name: "Download .coverage"
+        uses: actions/download-artifact@v2
+        with:
+          name: coverage-file
+      - name: "Create coverage report"
+        run: |
+          coverage report
+          coverage xml
+      - name: "Upload xml report"
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-xml-report
+          path: coverage.xml
+          retention-days: 14
