--- a/.github/workflows/exercise_workflow.yml
+++ b/.github/workflows/exercise_workflow.yml
@@ -20,6 +20,8 @@ jobs:
           pip install -r requirements.txt
       - name: "Run pytest with coverage"
         run: coverage run -m pytest
+      - name: "Show local filestructure"
+        run: ls -all
       - name: "Upload artifact"
         uses: actions/upload-artifact@v4
         with:
