Add include-hidden-files to test Action

--- a/.github/workflows/exercise_workflow.yml
+++ b/.github/workflows/exercise_workflow.yml
@@ -27,6 +27,7 @@ jobs:
         with:
           name: coverage-file
           path: .coverage
+          include-hidden-files: true
           retention-days: 1
 
   coverage_report:
